# zed-sql-tools

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: release.yml
crates/sql-lsp/: Cargo.toml
crates/sql-lsp/src/: formatter.rs  handlers.rs  ir.rs  lib.rs  linter.rs  main.rs  parser.rs
crates/sql-lsp/tests/: formatter_tests.rs  linter_tests.rs
languages/sql/: highlights.scm  indents.scm
scripts/: build.sh
src/: lib.rs
