[package]
name = "sql-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sql-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
tree-sitter = "0.25"
tree-sitter-sequel = { git = "https://github.com/DerekStride/tree-sitter-sql", rev = "4a99c73f5384f2be10adc55208c84d95a7eb1137" }

[[bin]]
name = "ast-dump"
path = "src/bin/ast_dump.rs"

[[bin]]
name = "lsp-test"
path = "src/bin/lsp_test.rs"
